syntax = "proto3";

package com.github.j5ik2o.motherbase.interfaceAdaptor.grpc.proto;
option optimize_for = SPEED;

message CreateSystemAccountRequest {
    string organizationId = 1;
    string name = 2;
    string email = 3;
}

message CreateSystemAccountResponse {
    string accountId = 1;
}

message RenameSystemAccountRequest {
    string accountId = 1;
    string name = 2;
}

message RenameSystemAccountResponse {
    string accountId = 1;
}

service SystemAccountCommandService {
    rpc CreateAccount (CreateSystemAccountRequest) returns (CreateSystemAccountResponse) {};
    rpc RenameAccount (RenameSystemAccountRequest) returns (RenameSystemAccountResponse) {};
}

