syntax = "proto3";

package com.github.j5ik2o.motherbase.interfaceAdaptor.grpc.proto;
option optimize_for = SPEED;

message GetSystemAccountRequest {
    string accountId = 1;
}

message GetSystemAccountBody {
    string accountId = 1;
    string organizationId = 2;
    string name = 3;
    string email = 4;
    int64 createdAt = 5;
    int64 updatedAt = 6;
}

message GetSystemAccountResponse {
    bool hasError = 1;
    string errorCode = 2;
    string errorMessage = 3;
    GetSystemAccountBody body = 4;
}

message GetSystemAccountsRequest {
    repeated string accountIds = 1;
}

message GetSystemAccountsResponse {
    bool hasError = 1;
    string errorCode = 2;
    string errorMessage = 3;
    repeated GetSystemAccountBody bodies = 4;
}

service AccountQueryService {
    rpc GetAccount (GetSystemAccountRequest) returns (GetSystemAccountResponse) {};
    rpc GetAccounts (GetSystemAccountsRequest) returns (GetSystemAccountsResponse) {};
}
